--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>ThreeJS four</title>
+<title>ThreeJS testing</title>
 <meta charset="UTF-8" />
 
 <!-- JS
@@ -24,15 +24,7 @@
     <div id="webgl-output"></div>
 
 
-<!-- JS code
-================================================== -->
-    <script type="text/javascript">
-        (function () {
-            // your page initialization code here
-            // the DOM will be available here
-            init()
-        })();
-    </script>
+
 </body>
 
 </html>
